--- a/Scatterchart.html
+++ b/Scatterchart.html
@@ -1,8 +1,8 @@
-Enter file contents hereEnter file contents here<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ScatterChartID115c229066c4</title>
+<title>ScatterChartIDd10464a667c</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <style type="text/css">
 body {
@@ -18,14 +18,14 @@ body {
 </head>
 <body>
  <!-- ScatterChart generated in R 3.2.4 by googleVis 0.5.10 package -->
-<!-- Fri May 27 09:47:56 2016 -->
+<!-- Mon May 30 20:08:59 2016 -->
 
 
 <!-- jsHeader -->
 <script type="text/javascript">
  
 // jsData 
-function gvisDataScatterChartID115c229066c4 () {
+function gvisDataScatterChartIDd10464a667c () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -693,14 +693,14 @@ return(data);
 }
  
 // jsDrawChart
-function drawChartScatterChartID115c229066c4() {
-var data = gvisDataScatterChartID115c229066c4();
+function drawChartScatterChartIDd10464a667c() {
+var data = gvisDataScatterChartIDd10464a667c();
 var options = {};
 options["allowHtml"] = true;
 
 
     var chart = new google.visualization.ScatterChart(
-    document.getElementById('ScatterChartID115c229066c4')
+    document.getElementById('ScatterChartIDd10464a667c')
     );
     chart.draw(data,options);
     
@@ -724,9 +724,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartScatterChartID115c229066c4);
+callbacks.push(drawChartScatterChartIDd10464a667c);
 })();
-function displayChartScatterChartID115c229066c4() {
+function displayChartScatterChartIDd10464a667c() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -750,14 +750,14 @@ callbacks.shift()();
 </script>
  
 <!-- jsChart -->  
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartScatterChartID115c229066c4"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartScatterChartIDd10464a667c"></script>
  
 <!-- divChart -->
   
-<div id="ScatterChartID115c229066c4" 
+<div id="ScatterChartIDd10464a667c" 
   style="width: 500; height: automatic;">
 </div>
- <div><span>Data: d.f &#8226; Chart ID: <a href="Chart_ScatterChartID115c229066c4.html">ScatterChartID115c229066c4</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
+ <div><span>Data: d.f &#8226; Chart ID: <a href="Chart_ScatterChartIDd10464a667c.html">ScatterChartIDd10464a667c</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
 <!-- htmlFooter -->
 <span> 
   R version 3.2.4 Revised (2016-03-16 r70336) 
