--- a/Bubblechart.html
+++ b/Bubblechart.html
@@ -1,8 +1,8 @@
-Enter file contents hereEnter file contents here<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>BubbleChartID115c33071b46</title>
+<title>BubbleChartIDd104fe36df5</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <style type="text/css">
 body {
@@ -18,14 +18,14 @@ body {
 </head>
 <body>
  <!-- BubbleChart generated in R 3.2.4 by googleVis 0.5.10 package -->
-<!-- Fri May 27 14:47:22 2016 -->
+<!-- Mon May 30 20:11:13 2016 -->
 
 
 <!-- jsHeader -->
 <script type="text/javascript">
  
 // jsData 
-function gvisDataBubbleChartID115c33071b46 () {
+function gvisDataBubbleChartIDd104fe36df5 () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -858,14 +858,14 @@ return(data);
 }
  
 // jsDrawChart
-function drawChartBubbleChartID115c33071b46() {
-var data = gvisDataBubbleChartID115c33071b46();
+function drawChartBubbleChartIDd104fe36df5() {
+var data = gvisDataBubbleChartIDd104fe36df5();
 var options = {};
 options["vAxis"] = {minValue:0, maxValue:100000};
 
 
     var chart = new google.visualization.BubbleChart(
-    document.getElementById('BubbleChartID115c33071b46')
+    document.getElementById('BubbleChartIDd104fe36df5')
     );
     chart.draw(data,options);
     
@@ -889,9 +889,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartBubbleChartID115c33071b46);
+callbacks.push(drawChartBubbleChartIDd104fe36df5);
 })();
-function displayChartBubbleChartID115c33071b46() {
+function displayChartBubbleChartIDd104fe36df5() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -915,14 +915,14 @@ callbacks.shift()();
 </script>
  
 <!-- jsChart -->  
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartBubbleChartID115c33071b46"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartBubbleChartIDd104fe36df5"></script>
  
 <!-- divChart -->
   
-<div id="BubbleChartID115c33071b46" 
+<div id="BubbleChartIDd104fe36df5" 
   style="width: 500; height: automatic;">
 </div>
- <div><span>Data: a &#8226; Chart ID: <a href="Chart_BubbleChartID115c33071b46.html">BubbleChartID115c33071b46</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
+ <div><span>Data: a &#8226; Chart ID: <a href="Chart_BubbleChartIDd104fe36df5.html">BubbleChartIDd104fe36df5</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
 <!-- htmlFooter -->
 <span> 
   R version 3.2.4 Revised (2016-03-16 r70336) 
