--- a/Mergingchart.html
+++ b/Mergingchart.html
@@ -1,8 +1,8 @@
-Enter file contents here<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>MergedIDd1022f6299b</title>
+<title>MergedID5883e732152</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <style type="text/css">
 body {
@@ -18,14 +18,14 @@ body {
 </head>
 <body>
  <!-- PieChart generated in R 3.2.4 by googleVis 0.5.10 package -->
-<!-- Mon May 30 20:38:11 2016 -->
+<!-- Mon May 30 21:26:59 2016 -->
 
 
 <!-- jsHeader -->
 <script type="text/javascript">
  
 // jsData 
-function gvisDataPieChartIDd107e5fc83 () {
+function gvisDataPieChartID58820615d () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -606,7 +606,7 @@ return(data);
 
 
 // jsData 
-function gvisDataPieChartIDd106a8c5e82 () {
+function gvisDataPieChartID58839aa1962 () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -1186,15 +1186,15 @@ return(data);
 }
  
 // jsDrawChart
-function drawChartPieChartIDd107e5fc83() {
-var data = gvisDataPieChartIDd107e5fc83();
+function drawChartPieChartID58820615d() {
+var data = gvisDataPieChartID58820615d();
 var options = {};
 options["allowHtml"] = true;
-options["title"] = "Military of Country";
+options["title"] = "Military rate of Country";
 
 
     var chart = new google.visualization.PieChart(
-    document.getElementById('PieChartIDd107e5fc83')
+    document.getElementById('PieChartID58820615d')
     );
     chart.draw(data,options);
     
@@ -1204,15 +1204,15 @@ options["title"] = "Military of Country";
 
 
 // jsDrawChart
-function drawChartPieChartIDd106a8c5e82() {
-var data = gvisDataPieChartIDd106a8c5e82();
+function drawChartPieChartID58839aa1962() {
+var data = gvisDataPieChartID58839aa1962();
 var options = {};
 options["allowHtml"] = true;
-options["title"] = "Mobile of Country";
+options["title"] = "Mobile rate of Country";
 
 
     var chart = new google.visualization.PieChart(
-    document.getElementById('PieChartIDd106a8c5e82')
+    document.getElementById('PieChartID58839aa1962')
     );
     chart.draw(data,options);
     
@@ -1236,9 +1236,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartPieChartIDd107e5fc83);
+callbacks.push(drawChartPieChartID58820615d);
 })();
-function displayChartPieChartIDd107e5fc83() {
+function displayChartPieChartID58820615d() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -1275,9 +1275,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartPieChartIDd106a8c5e82);
+callbacks.push(drawChartPieChartID58839aa1962);
 })();
-function displayChartPieChartIDd106a8c5e82() {
+function displayChartPieChartID58839aa1962() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -1301,11 +1301,11 @@ callbacks.shift()();
 </script>
  
 <!-- jsChart -->  
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartIDd107e5fc83"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartID58820615d"></script>
 
 
 <!-- jsChart -->  
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartIDd106a8c5e82"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartID58839aa1962"></script>
  
 <table border="0">
 <tr>
@@ -1313,7 +1313,7 @@ callbacks.shift()();
 
 <!-- divChart -->
   
-<div id="PieChartIDd107e5fc83" 
+<div id="PieChartID58820615d" 
   style="width: 500; height: automatic;">
 </div>
 
@@ -1322,14 +1322,14 @@ callbacks.shift()();
 
 <!-- divChart -->
   
-<div id="PieChartIDd106a8c5e82" 
+<div id="PieChartID58839aa1962" 
   style="width: 500; height: automatic;">
 </div>
 
 </td>
 </tr>
 </table>
- <div><span>Data: various &#8226; Chart ID: <a href="Chart_MergedIDd1022f6299b.html">MergedIDd1022f6299b</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
+ <div><span>Data: various &#8226; Chart ID: <a href="Chart_MergedID5883e732152.html">MergedID5883e732152</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
 <!-- htmlFooter -->
 <span> 
   R version 3.2.4 Revised (2016-03-16 r70336) 
