--- a/Scatterchart.html
+++ b/Scatterchart.html
@@ -763,5 +763,10 @@ callbacks.shift()();
   R version 3.2.4 Revised (2016-03-16 r70336) 
   &#8226; <a href="https://developers.google.com/terms/">Google Terms of Use</a> &#8226; <a href="https://google-developers.appspot.com/chart/interactive/docs/gallery/scatterchart">Documentation and Data Policy</a>
 </span></div>
+<div>
+<p>
+x축=소득, y축은 기대수명. 소득에 따른 기대수명을 보여주는 산점 도표이다. 이 도표에 따르면 소득과 기대수명이 어느정도 정의관계에 있다고 할 수 있다.   
+</p>  
+</div>  
 </body>
 </html>
