--- a/Scatterchart.html
+++ b/Scatterchart.html
@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ScatterChartID194065d938b8</title>
+<title>ScatterChartID19407a3b7e87</title>
 <meta http-equiv="content-type" content="text/html;charset=euk-kr" />
 <style type="text/css">
 body {
@@ -18,14 +18,14 @@ body {
 </head>
 <body>
  <!-- ScatterChart generated in R 3.2.4 by googleVis 0.5.10 package -->
-<!-- Mon Jun 06 10:26:44 2016 -->
+<!-- Mon Jun 06 10:32:10 2016 -->
 
 
 <!-- jsHeader -->
 <script type="text/javascript">
  
 // jsData 
-function gvisDataScatterChartID194065d938b8 () {
+function gvisDataScatterChartID19407a3b7e87 () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -693,20 +693,21 @@ return(data);
 }
  
 // jsDrawChart
-function drawChartScatterChartID194065d938b8() {
-var data = gvisDataScatterChartID194065d938b8();
+function drawChartScatterChartID19407a3b7e87() {
+var data = gvisDataScatterChartID19407a3b7e87();
 var options = {};
 options["allowHtml"] = true;
 options["title"] = "소득과 기대수명의 상관성";
 options["pointShape"] = "polygon";
 options["vAxis"] = {title:'소득'};
 options["hAxis"] = {title:'기대수명'};
+options["trendlines"] = "linear";
 options["width"] =    600;
 options["height"] =    800;
 
 
     var chart = new google.visualization.ScatterChart(
-    document.getElementById('ScatterChartID194065d938b8')
+    document.getElementById('ScatterChartID19407a3b7e87')
     );
     chart.draw(data,options);
     
@@ -730,9 +731,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartScatterChartID194065d938b8);
+callbacks.push(drawChartScatterChartID19407a3b7e87);
 })();
-function displayChartScatterChartID194065d938b8() {
+function displayChartScatterChartID19407a3b7e87() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -756,14 +757,14 @@ callbacks.shift()();
 </script>
  
 <!-- jsChart -->  
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartScatterChartID194065d938b8"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartScatterChartID19407a3b7e87"></script>
  
 <!-- divChart -->
   
-<div id="ScatterChartID194065d938b8" 
+<div id="ScatterChartID19407a3b7e87" 
   style="width: 600; height: 800;">
 </div>
- <div><span>Data: d.f &#8226; Chart ID: <a href="Chart_ScatterChartID194065d938b8.html">ScatterChartID194065d938b8</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
+ <div><span>Data: d.f &#8226; Chart ID: <a href="Chart_ScatterChartID19407a3b7e87.html">ScatterChartID19407a3b7e87</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
 <!-- htmlFooter -->
 <span> 
   R version 3.2.4 Revised (2016-03-16 r70336) 
