--- a/Scatterchart.html
+++ b/Scatterchart.html
@@ -770,5 +770,10 @@ callbacks.shift()();
   R version 3.2.4 Revised (2016-03-16 r70336) 
   &#8226; <a href="https://developers.google.com/terms/">Google Terms of Use</a> &#8226; <a href="https://google-developers.appspot.com/chart/interactive/docs/gallery/scatterchart">Documentation and Data Policy</a>
 </span></div>
+<div>소득과 기대수명의 상관관계를 보면 일정 수준 이상으로 소득이 증가할 경우
+<p>기대수명 또한 증가하는 것을 확인할 수 있다.</p>
+<p>소득이 어느 정도 안정적일 경우부터는 의료 시설을 이용하고 식단을 조절하는 등</p>
+<p>건강에 투자할 수 있는 여유가 증가하므로 이런 관계가 나타나는 것이라고 추론할 수 있다.</p>
+</div>
 </body>
 </html>
