--- a/Mergingchart.html
+++ b/Mergingchart.html
@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>MergedID58813c924fa</title>
+<title>MergedID194071016914</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <style type="text/css">
 body {
@@ -18,14 +18,14 @@ body {
 </head>
 <body>
  <!-- PieChart generated in R 3.2.4 by googleVis 0.5.10 package -->
-<!-- Mon May 30 21:26:59 2016 -->
+<!-- Mon Jun 06 11:58:13 2016 -->
 
 
 <!-- jsHeader -->
 <script type="text/javascript">
  
 // jsData 
-function gvisDataPieChartID58820615d () {
+function gvisDataPieChartID1940644e6bec () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -606,7 +606,7 @@ return(data);
 
 
 // jsData 
-function gvisDataPieChartID58839aa1962 () {
+function gvisDataPieChartID194014e61f7c () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -1186,15 +1186,17 @@ return(data);
 }
  
 // jsDrawChart
-function drawChartPieChartID58820615d() {
-var data = gvisDataPieChartID58820615d();
+function drawChartPieChartID1940644e6bec() {
+var data = gvisDataPieChartID1940644e6bec();
 var options = {};
 options["allowHtml"] = true;
 options["title"] = "Military rate of Country";
+options["width"] =   1000;
+options["height"] =    700;
 
 
     var chart = new google.visualization.PieChart(
-    document.getElementById('PieChartID58820615d')
+    document.getElementById('PieChartID1940644e6bec')
     );
     chart.draw(data,options);
     
@@ -1204,15 +1206,17 @@ options["title"] = "Military rate of Country";
 
 
 // jsDrawChart
-function drawChartPieChartID58839aa1962() {
-var data = gvisDataPieChartID58839aa1962();
+function drawChartPieChartID194014e61f7c() {
+var data = gvisDataPieChartID194014e61f7c();
 var options = {};
 options["allowHtml"] = true;
 options["title"] = "Mobile rate of Country";
+options["width"] =   1000;
+options["height"] =    700;
 
 
     var chart = new google.visualization.PieChart(
-    document.getElementById('PieChartID58839aa1962')
+    document.getElementById('PieChartID194014e61f7c')
     );
     chart.draw(data,options);
     
@@ -1236,9 +1240,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartPieChartID58820615d);
+callbacks.push(drawChartPieChartID1940644e6bec);
 })();
-function displayChartPieChartID58820615d() {
+function displayChartPieChartID1940644e6bec() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -1275,9 +1279,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartPieChartID58839aa1962);
+callbacks.push(drawChartPieChartID194014e61f7c);
 })();
-function displayChartPieChartID58839aa1962() {
+function displayChartPieChartID194014e61f7c() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -1301,11 +1305,11 @@ callbacks.shift()();
 </script>
  
 <!-- jsChart -->  
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartID58820615d"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartID1940644e6bec"></script>
 
 
 <!-- jsChart -->  
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartID58839aa1962"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartPieChartID194014e61f7c"></script>
  
 <table border="0">
 <tr>
@@ -1313,8 +1317,8 @@ callbacks.shift()();
 
 <!-- divChart -->
   
-<div id="PieChartID58820615d" 
-  style="width: 500; height: automatic;">
+<div id="PieChartID1940644e6bec" 
+  style="width: 1000; height: 700;">
 </div>
 
 </td>
@@ -1322,18 +1326,22 @@ callbacks.shift()();
 
 <!-- divChart -->
   
-<div id="PieChartID58839aa1962" 
-  style="width: 500; height: automatic;">
+<div id="PieChartID194014e61f7c" 
+  style="width: 1000; height: 700;">
 </div>
 
 </td>
 </tr>
 </table>
- <div><span>Data: various &#8226; Chart ID: <a href="Chart_MergedID58813c924fa.html">MergedID58813c924fa</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
+ <div><span>Data: various &#8226; Chart ID: <a href="Chart_MergedID194071016914.html">MergedID194071016914</a> &#8226; <a href="https://github.com/mages/googleVis">googleVis-0.5.10</a></span><br /> 
 <!-- htmlFooter -->
 <span> 
   R version 3.2.4 Revised (2016-03-16 r70336) 
   &#8226; <a href="https://developers.google.com/terms/">Google Terms of Use</a> &#8226; Data Policy: See individual charts
 </span></div>
+<div>왼쪽의 파이차트는 국가별 군대비율을, 오른쪽의 파이차트는 국가별 휴대전화 보급률을 나타낸다.
+<p>군대의 비율은 오만과 사우디 아라비이가 눈에 띌만큼 상대적으로 큰 가장 많은 비율을 차지하고</p>
+<p>휴대전화의 보급률은 국가별로 크게 차이를 느끼기 힘든 수치의 차이를 보이고 있다.</p>
+</div>
 </body>
 </html>
