--- a/Motionchart.html
+++ b/Motionchart.html
@@ -15093,8 +15093,8 @@ callbacks.shift()();
   R version 3.2.4 Revised (2016-03-16 r70336) 
   &#8226; <a href="https://developers.google.com/terms/">Google Terms of Use</a> &#8226; <a href="https://google-developers.appspot.com/chart/interactive/docs/gallery/motionchart">Documentation and Data Policy</a>
 </span></div>
-<div>1973년부터 2013년까지의 다양한 빅 데이터를 가지고
-  <p>각 독립변수에 따른 종속 변수의 변화를 시간의 흐름에 따라 확인할 수 있다.</p>
+<div>독립변수, 종속변수 뿐만아니라 데이터를 색깔, 크기, 시간의 흐름까지
+  <p>총 5차원의 데이터를 시각화하여 표현 가능한 차트이다</p>
 </div>
 </body>
 </html>
